# detox

./: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js  vpn.md
.claude/: settings.local.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  lib.rs  main.rs  timelock.rs
src-tauri/src/blocker/: hosts.rs  mod.rs  process.rs
src/routes/: +page.svelte
